--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Nunito", Arial, Helvetica, sans-serif;
+  font-style: normal;
 }
 
-body {
-    font-family: "Nunito", Arial, Helvetica, sans-serif;
-}
 a {
   text-decoration: none;
 }
